--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ check50==3.0.9
 Click==7.0
 colorama==0.4.1
 compare50==1.1.2
+crossrefapi==1.0.3
 cryptography==2.8
 cs50==4.0.4
 cssselect2==0.2.2
