register, reset, UI fixes

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 sendgrid.env
+sendgrid.env
+sendgrid.env
+sendgrid.env
+sendgrid.env
+sendgrid.env
+sendgrid.env
+sendgrid.env
+sendgrid.env
+sendgrid.env
+sendgrid.env
+sendgrid.env
+sendgrid.env
