--- a/requirements.txt
+++ b/requirements.txt
@@ -76,6 +76,7 @@ requests-oauthlib==1.3.0
 retrying==1.3.3
 rsa==3.4.2
 s3transfer==0.2.1
+sendgrid==6.3.1
 six==1.13.0
 sortedcontainers==2.1.0
 soupsieve==1.9.5
