--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,2 @@
 sendgrid.env
-sendgrid.env
-sendgrid.env
-sendgrid.env
-sendgrid.env
-sendgrid.env
-sendgrid.env
-sendgrid.env
-sendgrid.env
-sendgrid.env
-sendgrid.env
-sendgrid.env
-sendgrid.env
+__pycache__
