--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,9 @@ services:
     - "80:5000"
     environment:
      - "FLASK_ENV=development"
+     - "FLASK_APP=/dcyphr/application.py"
      - "SECRET_KEY=fakekey123"
+     - "OLD_DATABASE_URL=sqllite:////dcyphr/dcyphr.db"
+     - "DATABASE_URL=postgres://renmhhpugjueqo:ad87849e90586574f45a3b5eeb037d5c87d6d1edad3c9da35ed0d8d7e3b34ad2@ec2-3-230-106-126.compute-1.amazonaws.com:5432/d64lerqdbpjdga"
     volumes:
     - ./data/models:/dcyphr/models
